@@ -1,5 +1,13 @@
 1.4.0-vcli-alpha Sara
 
+* Added patches to the Meandre Client and Meandre Admin Client provided by Amit. 
+  Patches add:
+  	- Capability to get a componet description
+  	- Get the component jar info
+  	- Get the server version
+  	- Ping the server
+  	- Return the plugin information in JSON format 
+ 
 * Added the following entries to the returned information 'meandre_uri', 'meandre_uri_name', 
   'description' to both, components and flow calls (see the html interface for mer details).
   
